syntax = "proto2";
package protobufmsg;

message Hash {
    required bytes data = 1;
}

message StatusData {
  required uint32 protocolVersion = 1;
  required uint64 networkId = 2;
  required Hash   currentBlock = 3;
  required Hash   genesisBlock = 4;
}

message NewBlockHashData {
  required Hash    hash = 1;
  required uint64  number = 2;
}

message NewBlockHashesDatas{
  repeated NewBlockHashData data = 1;
}

message GetBlockHeadersData {
  required Hash    hash = 1;
  required uint64  number = 2;
}